@@ -82,11 +82,6 @@
 ## The maximum size, in bytes, for each personality file
 #MAX_PERSONALITY_SIZE = 10240
 #
-## Available storage types to be used as disk templates
-## Use ext_<provider_name> to map specific provider for `ext` disk template.
-#GANETI_DISK_TEMPLATES = ('blockdev', 'diskless', 'drbd', 'file', 'plain',
-#                         'rbd',  'sharedfile')
-#DEFAULT_GANETI_DISK_TEMPLATE = 'drbd'
 #
 ## Top-level URL of the astakos instance to be used for user management
 #ASTAKOS_BASE_URL = 'https://accounts.example.synnefo.org/'
